remove the bg in 1st section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,21 @@
   background-color: white;
 }
 
+.contactme2 {
+    position: relative;
+    padding: 5px 30px;
+    background: #00796b;
+    color: #fff;
+    border: 2px solid #fff;
+    font-weight: 600;
+    font-size: 15px;
+    letter-spacing: 1px;
+    display: inline-block;
+    margin-top: 1.5em;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+  }
+
 /* main body */
 
 /* body-color */
