--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,10 +340,10 @@ li.logo span {
 }
 
 h3 {
-  font-weight: 200;
-  margin-bottom: 60px;
+  font-size: 25px;
+  margin-bottom: 20px;
   margin-top: 0;
-  padding: 30px 40px;
+  padding-left: 45px;
   text-transform: uppercase;
 }
 
