--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,6 +611,17 @@ small {
   background-color: #00695c !important;
 } */
 
+@media (max-aspect-ratio: 1/1) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .image {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+}
+
 @media (min-width: 1200px) {
   #experience .container {
     width: 860px;
