--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -92,6 +92,8 @@
   img {
     max-width: 175px;
     border-radius: 50%;
+    aspect-ratio: 3/4;
+    object-fit: cover;
 
     @include breakpoint($large) {
       padding: 5px;
