--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@ layout: compress
   <body>
 
     {% include browser-upgrade.html %}
+    {% include top_banner.html %}
     {% include masthead.html %}
 
     {{ content }}
