--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -7,7 +7,7 @@
   background: var(--global-bg-color);
   border-bottom: 1px solid var(--global-border-color);
   height: $masthead-height;
-  top: 0;
+  top: 80px; /* Height of the banner */
   width: 100%;
 
   -webkit-animation: intro 0.3s both;
