--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -16,7 +16,14 @@
     justify-content: space-between;
     padding-left: 1em;
     padding-right: 1em;
-    margin-top: 0;
+    margin: 0 auto;
+    
+    @include breakpoint($large) {
+        width: $large;
+        margin: 0 auto;
+        padding-left: 2em;
+        padding-right: 2em;
+    }
 
     @include breakpoint($x-large) {
         max-width: $x-large;
