--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -17,7 +17,7 @@
     height: 100vh;
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
-    padding-top: $masthead-height;
+    padding-top: calc(#{$masthead-height} + 80px); // Added 80px to move sidebar down
   }
 
   @include breakpoint($large) {
@@ -94,6 +94,7 @@
     border-radius: 50%;
     aspect-ratio: 3/4;
     object-fit: cover;
+    object-position: center;
 
     @include breakpoint($large) {
       padding: 5px;
