--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,12 @@
 
 {% if page.author_profile or layout.author_profile or page.sidebar %}
   <div class="sidebar sticky">
-  {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
+  {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}
+    <div class="school-logo" style="margin-top: 10px;">
+      <img src="{{ base_path }}/images/beee-logo-large.png" alt="BEEE Logo" style="width: 80%; margin-bottom: 10px;">
+      <img src="{{ base_path }}/images/polyu-logo.png" alt="PolyU Logo" style="width: 80%; margin-bottom: 10px;">
+    </div>
+    {% endif %}
   {% if page.sidebar %}
     {% for s in page.sidebar %}
       {% if s.image %}
