--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -144,6 +144,27 @@ body {
   margin-right: 15px;
   text-decoration: none;
 }
+/* 平板电脑尺寸优化 */
+@media (max-width: 1024px) {
+  .school-logo {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 8px !important;
+    width: 100%;
+  }
+  
+  .school-logo img {
+    flex: 1;
+    width: auto !important;
+    height: 70px !important;
+    margin-bottom: 8px !important;
+    object-fit: contain;
+  }
+}
+
 @media (max-width: 768px) {
   .team-member {
     flex-direction: column;
